@@ -1,0 +1,14 @@
+<?xml version="1.0"?>
+<portlets>
+
+  <portlet addview="blog.archiv.portlet" remove="true" />
+
+  <portlet
+    addview="blog.archiv.portlet"
+    title="Blog Archive Portlet"
+    description="A portlet for ftw blog, which shows the archive.">
+      <for interface="plone.app.portlets.interfaces.IColumn" />
+      <for interface="plone.app.portlets.interfaces.IDashboard" />
+   </portlet>
+
+</portlets>
